# service/api/get-comments.go
@@ -16,19 +16,19 @@ import (
 func (rt *_router) getComments(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	// Parse request
 	photoID := ps.ByName("photoID")
-	startId := r.URL.Query().Get("startId")
+	startID := r.URL.Query().Get("startID")
 	startDate := r.URL.Query().Get("startDate")
 	if startDate == "" {
 		startDate = globaltime.ToString(globaltime.Now())
 	}
 	var req request.GetCommentsRequest
 	req.PathParameters.PhotoID = photoID
-	req.QueryParameters.StartId = startId
+	req.QueryParameters.StartID = startID
 	req.QueryParameters.StartDate = startDate
 
 	// Validate request
 	ctx.Logger.Debug(photoID)
-	ctx.Logger.Debug(startId)
+	ctx.Logger.Debug(startID)
 	ctx.Logger.Debug(startDate)
 	if !req.IsValid() {
 		ctx.Logger.Error("error validating request")
@@ -63,7 +63,7 @@ func (rt *_router) getComments(w http.ResponseWriter, r *http.Request, ps httpro
 
 	// Get comments from database
 	ctx.Logger.Debugf(`retrieving comments for photoID "%s"`, req.PathParameters.PhotoID)
-	comments, err := rt.db.GetComments(photoID, startDate, startId)
+	comments, err := rt.db.GetComments(photoID, startDate, startID)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("error retrieving comments from database")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -74,10 +74,10 @@ func (rt *_router) getComments(w http.ResponseWriter, r *http.Request, ps httpro
 	var res response.GetCommentsResponse
 	if len(comments) == 0 {
 		res.LastDate = ""
-		res.LastId = ""
+		res.LastID = ""
 	} else {
 		res.LastDate = comments[len(comments)-1].DateTime
-		res.LastId = comments[len(comments)-1].CommentID
+		res.LastID = comments[len(comments)-1].CommentID
 	}
 	res.Records = comments
 	w.Header().Set("content-type", "application/json")
