# service/api/uncomment-photo.go
@@ -15,10 +15,10 @@ import (
 func (rt *_router) uncommentPhoto(w http.ResponseWriter, _ *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	// Parse request
 	photoID := ps.ByName("photoID")
-	commentId := ps.ByName("commentId")
+	commentID := ps.ByName("commentID")
 	var req request.UncommentPhotoRequest
 	req.PathParameters.PhotoID = photoID
-	req.PathParameters.CommentID = commentId
+	req.PathParameters.CommentID = commentID
 
 	// Validate request
 	if !req.IsValid() {
@@ -29,7 +29,7 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, _ *http.Request, ps htt
 
 	// Retrieve author of the comment
 	ctx.Logger.Debugf("retrieving comment authorId from database")
-	authorId, err := rt.db.GetCommentAuthorId(commentId)
+	authorId, err := rt.db.GetCommentAuthorId(commentID)
 	if errors.Is(err, sql.ErrNoRows) {
 		ctx.Logger.WithError(err).Error("error retrieving comment authorId from database")
 		w.WriteHeader(http.StatusNotFound)
@@ -50,7 +50,7 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, _ *http.Request, ps htt
 
 	// Delete comment from database
 	ctx.Logger.Debugf("deleting comment from database")
-	err = rt.db.DeleteComment(commentId)
+	err = rt.db.DeleteComment(commentID)
 	if err != nil {
 		ctx.Logger.Error("error deleting comment from database")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -58,7 +58,7 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, _ *http.Request, ps htt
 	}
 
 	// Send response
-	res := response.UncommentPhotoResponse{CommentID: commentId}
+	res := response.UncommentPhotoResponse{CommentID: commentID}
 	w.Header().Set("content-type", "application/json")
 	_ = json.NewEncoder(w).Encode(res)
 }
